--- a/css/style-wide.css
+++ b/css/style-wide.css
@@ -1,35 +1,40 @@
 /*
-	Helios 1.5 by HTML5 UP
+	Directive by HTML5 UP
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-/*********************************************************************************/
-/* Basic                                                                         */
-/*********************************************************************************/
+/* Basic */
 
-	body,input,textarea,select
-	{
+	body, input, select, textarea {
 		font-size: 14pt;
-		line-height: 1.75em;
 	}
-	
-/*********************************************************************************/
-/* Carousel                                                                      */
-/*********************************************************************************/
 
-	.carousel
-	{
-		padding: 1.5em 0 1.5em 0;
+	h2 {
+		font-size: 1.5em;
 	}
-	
-		.carousel .reel
-		{
-			padding: 0 1.5em 0 1.5em;
+
+	h3 {
+		font-size: 1.25em;
+	}
+
+/* Section/Article */
+
+	header.major p {
+		font-size: 1.25em;
+	}
+
+/* Header */
+
+	#header {
+		padding: 8em 0 16em 0;
+	}
+
+		#header h1 {
+			font-size: 2.25em;
 		}
 
-		.carousel article
-		{
-			width: 18em;
-			margin: 0 1.25em 0 0;
+		#header p {
+			font-size: 1.25em;
+			line-height: 1.65em;
 		}
